added test for comments feed api
